test-suite/tests/roundtrip/invalid/semantic/typecheck/int_var_in_set_expr/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/int_var_in_set_expr/input.essence:3:11:
  |
3 | such that i subset s
  |           ^
Type error:
	Expected: "Set MSet funcition or relation"
	Got: int

tests/roundtrip/invalid/semantic/typecheck/int_var_in_set_expr/input.essence:3:20:
  |
3 | such that i subset s
  |                    ^
Type error:
	Expected: int
	Got: set of int

